@startuml


skinparam classAttributeIconSize 0

abstract class GlassesFrame {
#Lens lens
#String size
#String description
-Boolean antiReflective
-Boolean blueLight
-Boolean polarized
-Boolean polycarbonate


+getDescription(): String
{abstract} +getCost(): double
{abstract} +getSize(): String

hasAntiReflective()
hasBlueLight()
hasPolarized()
hasPolycarbonate()
}
class Lens {
-String type
-double cost
+ Lens(type: String, cost: double)
+ getDescription()
+getCost()

}

class RoundFrame {
+RoundFrame(lens: Lens, size: String)
+getCost()
}

class CatEyesFrame {
+CatEyesFrame(lens: Lens, size: String)
+getCost()
}

class SquareFrame {

+SquareFrame(lens: Lens, size: String)
+getCost()
}



GlassesFrame o--left"0..2" Lens : has

GlassesFrame <|-- SquareFrame
GlassesFrame <|-- RoundFrame
GlassesFrame <|-- CatEyesFrame



@enduml